--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "trivia-snake",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://n5frqox3zf.execute-api.us-east-1.amazonaws.com/prod",
+  "type": "module",
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.204.0",
+    "@aws-cdk/aws-cloudfront": "^1.204.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.204.0",
+    "@aws-cdk/aws-dynamodb": "^1.204.0",
+    "@aws-cdk/aws-lambda": "^1.204.0",
+    "@aws-cdk/aws-s3": "^1.204.0",
+    "@aws-cdk/aws-s3-deployment": "^1.204.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +20,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -22,7 +32,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cdk": "cdk",
+    "deploy:infra": "cdk deploy",
+    "deploy:frontend": "npm run build && aws s3 sync build/ s3://your-s3-bucket-name",
+    "deploy": "npm run deploy:infra && npm run deploy:frontend"
   },
   "eslintConfig": {
     "extends": [
@@ -43,9 +57,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "autoprefixer": "^10.4.20",
+    "aws-cdk": "^2.165.0",
+    "aws-cdk-lib": "^2.165.0",
+    "constructs": "^10.4.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
+    "ts-node": "^10.9.2"
   }
+  
 }
