--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.5.5",
     "@aws-cdk/aws-apigateway": "^1.204.0",
     "@aws-cdk/aws-cloudfront": "^1.204.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.204.0",
@@ -19,6 +20,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "aws-amplify": "^6.8.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
