--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
     "@aws-cdk/aws-apigateway": "^1.204.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
     "@aws-cdk/aws-cloudfront": "^1.204.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.204.0",
     "@aws-cdk/aws-dynamodb": "^1.204.0",
@@ -26,6 +28,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
     "aws-amplify": "^6.8.0",
+    "aws-jwt-verify": "^4.0.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -48,7 +52,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cdk": "cdk",
-    "deploy:infra": "cdk deploy",
+    "deploy:infra": "cd infra && cdk deploy",
     "deploy:frontend": "npm run build && aws s3 sync build/ s3://your-s3-bucket-name",
     "deploy": "npm run deploy:infra && npm run deploy:frontend"
   },
@@ -74,9 +78,6 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
-    "aws-cdk": "^2.165.0",
-    "aws-cdk-lib": "^2.165.0",
-    "constructs": "^10.4.2",
     "env-cmd": "^10.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
